admin/theme/mymobile/style/media.css
/*start 100% height selectors media queries */
/* iPhone [portrait + landscape] */
@media only screen and (max-device-width: 480px) {
    .ui-content {
    min-height: 253px;
    }
    .forumpost div.commands a {
    font-size: 80%;
    }
    .forumpost div.commands a .ui-btn-inner {
    padding: 0.6em 20px;
    }
    table.quizattemptsummary td, table.quizattemptsummary th.header {
    font-size: 90%;
    }
    table.user-grade {
    font-size:90%;
    overflow: auto;
    }
    #message_contacts td.link {
    width: 85%;
    text-align: left;
    }
    #message_contacts .contact {
    width: 10%;
    font-size: 10px;
    }
    #message_contacts td.pix {
    width: 10%;
    }
    td.today.cell li a {
    font-size: 80%;
    font-weight: normal;
    }
    div.gradeparent {
    max-height: 200px;
    }
    .resourcecontent {
    max-height: 250px;
    }
    .path-mod-forum div.subject {
    font-size: 100%;
    }
    .path-mod-forum .indent {
    margin-left: 0px;
    }
	
#page-mod-quiz-viewPAGE .ui-content { padding:0;}
#page-mod-quiz-viewPAGE table.quizattemptsummary  td.lastcol img { width: 80px; height: 107px;}
#page-mod-quiz-viewPAGE table.quizattemptsummary  td, #page-mod-quiz-viewPAGE table.quizattemptsummary  th { font-size:10px;}
#page-mod-quiz-viewPAGE { margin-top:30px;}
}
@media all and (max-width: 650px){
    .forumpost div.commands a {
    font-size: 80%;
    }
    .forumpost div.commands a .ui-btn-inner {
    padding: 0.6em 20px;
    }
}
/* iPad [portrait  */
@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
    .ui-content {
    min-height: 765px;
    }
    .ui-dialog .ui-content {
    min-height: 200px;
    }
    .resourcecontent {
    max-height: 400px;
    }
}
/* iPad landscape  */
@media only screen and (max-device-width: 1024px) and (orientation:landscape) {
    .ui-content {
    min-height: 510px;
    }
    .ui-dialog .ui-content {
    min-height: 200px;
    }
    .resourcecontent {
    max-height: 300px;
    }
}
/* browser  */
@media only screen and (min-device-width: 1025px) {
    .ui-content {
    min-height: 528px;
    }
    .ui-dialog .ui-content {
    min-height: 200px;
    }
}
.portrait .mspacer {
    height: 90px;
    border: 0px solid #333;
}
/*end 100% height */

